# SensorProyect

./: CMakeLists.txt  Readme.md
DataBase/: CMakeLists.txt
DataBase/src/: Database.cpp  Database.hpp
main-exec/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
sensor_driver/: CMakeLists.txt
sensor_driver/src/: sensors.cpp  sensors.hpp
sockets-source/: CMakeLists.txt
sockets-source/src/: comunication.cpp  comunication.hpp  message_wrap.cpp  message_wrap.hpp
